# workspace-mcp

./: .gitignore  ARCHITECTURE.md  README.md  config.toml.example  pyproject.toml
demo/: test_mcp_interactive.py
src/workspace_mcp/: client.py  config.py  server.py  tools.py
tests/: test_config.py  test_integration.py  test_server.py  test_tools.py  test_transport.py
